--- a/front_end/index.html
+++ b/front_end/index.html
@@ -1,1 +1,43 @@
-<h1>Hello world</h1>
+<!DOCTYPE html>
+<html>
+<head>
+	<title>Simple Map</title>
+	<meta name="viewport" content="initial-scale=1.0">
+	<meta charset="utf-8">
+	<style>
+		html, body {
+			height: 100%;
+			margin: 0;
+			padding: 0;
+		}
+
+		#map {
+			height: 100%;
+		}
+	</style>
+</head>
+<body>
+	<div id="map"></div>
+
+	<script>
+		var map;
+
+		function initMap() {
+			var myLatlng = new google.maps.LatLng(-25.363882,131.044922);
+
+			map = new google.maps.Map(document.getElementById('map'), {
+				center: myLatlng,
+				zoom: 8
+			});
+
+			var marker = new google.maps.Marker({
+				position: myLatlng,
+				map: map,
+				icon: 'plane.png',
+				draggable: true
+			});
+		}
+	</script>
+	<script src="https://maps.googleapis.com/maps/api/js?callback=initMap" async defer></script>
+</body>
+</html>
