--- a/front_end/index.html
+++ b/front_end/index.html
@@ -41,8 +41,13 @@
 				map.panTo(marker.getPosition());
 			});
 
-			function getInfo(lat, lon) {
+			getInfo(-25.363882, 131.044922);
 
+			function getInfo(lat, lon) {
+				ajax('/getinfo', { lat: lat, lon: lon }, function(data) {
+					console.log(data);
+					window.bob = data;
+				});
 			}
 		}
 
@@ -58,7 +63,7 @@
 
 			request.onload = function() {
 				if (this.status >= 200 && this.status < 400) {
-					callback(this.response);
+					callback(JSON.parse(this.response));
 				} else {
 					console.log('AJAX error on ' + url);
 				}
