--- a/front_end/index.html
+++ b/front_end/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Simple Map</title>
+	<title>Discoverly</title>
 	<meta name="viewport" content="initial-scale=1.0">
 	<meta charset="utf-8">
 	<style>
@@ -13,11 +13,21 @@
 
 		#map {
 			height: 100%;
+			width: 70%;
+		}
+
+		#details {
+			position: absolute;
+			top: 0;
+			right: 0;
+			width: 30%;
+			bottom: 0;
 		}
 	</style>
 </head>
 <body>
 	<div id="map"></div>
+	<div id="details"></div>
 
 	<script>
 		var map;
@@ -51,8 +61,14 @@
 			function getInfo(lat, lon) {
 				ajax('/getinfo', { lat: lat, lon: lon }, function(data) {
 					console.log(data);
+					render('details', 'detailsTemplate', data);
 				});
 			}
+		}
+
+		function render(location, template, data) {
+			template = Handlebars.compile(document.getElementById(template).innerHTML);
+			document.getElementById(location).innerHTML = template(data);
 		}
 
 		function ajax(url, data, callback) {
@@ -91,6 +107,12 @@
 			};
 		}
 	</script>
+
+	<script id="detailsTemplate" type="handlebars">
+		<h1>Hello</h1>
+	</script>
+
 	<script src="https://maps.googleapis.com/maps/api/js?callback=initMap" async defer></script>
+	<script src="./handlebars-v4.0.5.js"></script>
 </body>
 </html>
