--- a/front_end/index.html
+++ b/front_end/index.html
@@ -31,97 +31,20 @@
 	<div id="map"></div>
 	<div id="details"></div>
 
-	<script>
-		var map, current;
-
-		function initMap() {
-			var myLatlng = new google.maps.LatLng(-25.363882,131.044922);
-
-			map = new google.maps.Map(document.getElementById('map'), {
-				mapTypeId: google.maps.MapTypeId.SATELLITE,
-				center: myLatlng,
-				zoom: 11
-			});
-
-			var marker = new google.maps.Marker({
-				position: myLatlng,
-				map: map,
-				icon: 'plane.png',
-				draggable: true
-			});
-
-			map.addListener('center_changed', debounce(function() {
-				setPosition(map.getCenter());
-			}, 500));
-
-			function setPosition(position) {
-				if (current != position) {
-					map.setCenter(position);
-					marker.setPosition(position);
-					getInfo(position.lat(), position.lng());
-					current = position;
-				}
-			}
-
-			function getInfo(lat, lon) {
-				ajax('/getinfo', { lat: lat, lon: lon }, function(data) {
-					console.log(data);
-					render('details', 'detailsTemplate', data);
-				});
-			}
-		}
-
-		function render(location, template, data) {
-			template = Handlebars.compile(document.getElementById(template).innerHTML);
-			document.getElementById(location).innerHTML = template(data);
-		}
-
-		function ajax(url, data, callback) {
-			url += '?';
-
-			for (var key in data) {
-				url += key + '=' + data[key] + '&';
-			}
-
-			var request = new XMLHttpRequest();
-			request.open('GET', url, true);
-
-			request.onload = function() {
-				if (this.status >= 200 && this.status < 400) {
-					callback(JSON.parse(this.response));
-				} else {
-					console.log('AJAX error on ' + url);
-				}
-			};
-
-			request.onerror = function() {
-				console.log('AJAX error on ' + url);
-			};
-
-			request.send();
-		}
-
-		function debounce(fn, delay) {
-			var timer = null;
-			return function () {
-				var context = this, args = arguments;
-				clearTimeout(timer);
-				timer = setTimeout(function () {
-					fn.apply(context, args);
-				}, delay);
-			};
-		}
-	</script>
-
 	<script id="detailsTemplate" type="handlebars">
 		<h1>Hello</h1>
 
+		{{#each places}}
+			<a href="{{url}}" target="_blank">{{name}}, {{formatted_address}}</a>
+		{{/each}}
+
 		{{#each flickr}}
-			<img src="{{url}}"/>
+			<img src="{{url}}" title="{{title}}" />
 		{{/each}}
 	</script>
 
-	<script src="https://maps.googleapis.com/maps/api/js?callback=initMap" async defer></script>
 	<script src="./handlebars-v4.0.5.js"></script>
+	<script src="./main.js"></script>
+	<script src="https://maps.googleapis.com/maps/api/js?callback=initMap" async defer></script>
 </body>
 </html>
