--- a/front_end/index.html
+++ b/front_end/index.html
@@ -47,7 +47,13 @@
 		}
 
 		#photos img {
-	    width: 100%;
+	    	width: 32%;
+		}
+
+		@media (max-width: 700px) {
+			#photos img {
+		    	width: 100%;
+			}
 		}
 	</style>
 </head>
